--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/preline/preline.js"],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -91,10 +91,13 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/preline/preline.js"]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d7dea114-eec9-4e1f-9230-979d8d306695"
   }
 }
